--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,13 @@ jobs:
 
       - name: Build with Maven
         run: mvn package
+
+      - name: Deploy to AWS Lambda
+        if: github.ref == 'refs/heads/main'
+        uses: appleboy/lambda-action@master
+        with:
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          function_name: jmail-lambda
+          zip_file: target/jmail-lambda-1.0.0-SNAPSHOT.jar
+          dry_run: true
