--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,13 @@
     <maven.compiler.target>8</maven.compiler.target>
 
     <!-- Dependency versions -->
+    <aws.lambda.core.version>1.2.2</aws.lambda.core.version>
+    <aws.lambda.java.version>3.11.0</aws.lambda.java.version>
+    <gson.version>2.10.1</gson.version>
     <jmail.version>1.4.1</jmail.version>
+    <json.simple.version>1.1.1</json.simple.version>
     <junit.version>5.9.2</junit.version>
+    <mockito.version>4.11.0</mockito.version>
   </properties>
 
   <dependencies>
@@ -29,17 +34,22 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-core</artifactId>
-      <version>1.2.2</version>
+      <version>${aws.lambda.core.version}</version>
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-events</artifactId>
-      <version>3.11.0</version>
+      <version>${aws.lambda.java.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.8.9</version>
+      <version>${gson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>${json.simple.version}</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -56,13 +66,8 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>4.11.0</version>
+      <version>${mockito.version}</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.googlecode.json-simple</groupId>
-      <artifactId>json-simple</artifactId>
-      <version>1.1.1</version>
     </dependency>
   </dependencies>
   <build>
