--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
     <json.simple.version>1.1.1</json.simple.version>
     <junit.version>5.9.2</junit.version>
     <mockito.version>4.11.0</mockito.version>
+
+    <!-- Plugin versions -->
+    <maven.complier.plugin.version>3.11.0</maven.complier.plugin.version>
+    <maven.shade.plugin.version>3.4.1</maven.shade.plugin.version>
   </properties>
 
   <dependencies>
@@ -91,7 +95,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.2.2</version>
+        <version>${maven.shade.plugin.version}</version>
         <configuration>
           <createDependencyReducedPom>false</createDependencyReducedPom>
         </configuration>
@@ -107,7 +111,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>${maven.complier.plugin.version}</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
